# root-graphic-tests

./: .gitignore  ARCHITECTURE.md  AtlasExample_pro.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Test_JSON.cpp  Test_JSON.hpp  Test_JsRoot.js  Test_Root.cpp  Test_Root.hpp  Test_SVG.js  generate_macros_cmake.py  graphtext.json  graphtext_pro.json  latex.ps  latex2.ps  macros.cmake  macros_list.json  macros_test.json  package-lock.json  package.json  piechart.json  piechart_pro.json  test.cxx  test.js
.github/workflows/: graphic-test.yml
graphics/: analyze.C  archi.C  arrows.C  basic3d.C  canvas.C  compile.C  crown.C  ellipse.C  eval.C  event.C  feynman.C  first.C  formula1.C  framework.C  gaxis.C  gaxis3.C  greyscale.C  gtime.C  latex.C  latex2.C  latex3.C  latex4.C  latex5.C  markerwarning.C  mass_spectrum.C  pavetext.C  quarks.C  tmathtext.C  tmathtext2.C
graphs/: graph.C
json_pro/: DynamicSlice_pro.json  Fibonacci_pro.json  GammaFun_pro.json  NormalizeHistogram_pro.json  TSVDUnfoldExample_pro.json  ZoomHistogram_pro.json  annotation3d_pro.json  archi_pro.json  arrows_pro.json  basic3d_pro.json  candledecay_pro.json  candleplot_pro.json  candleplotstack_pro.json  candleplotwhiskers_pro.json  candlescaled_pro.json  canvas_pro.json  chi2test_pro.json  compile_pro.json  crown_pro.json  ellipse_pro.json  eval_pro.json  event_pro.json  exclusiongraph2_pro.json  exclusiongraph_pro.json  feynman_pro.json  fillhistosauto2p_pro.json  fillrandom_pro.json  first_pro.json  formula1_pro.json  framework_pro.json  gaussian_ratio_plot_pro.json  gaxis3_pro.json  gerrors2_pro.json  gerrors_pro.json  gmultierrors_pro.json  graph2derrorsfit_pro.json  graphApply_pro.json  graph_pro.json  graphpolar2_pro.json  graphpolar_pro.json  (+56 more)
json_ref/: AtlasExample.json  Bessel.json  BreitWigner.json  CrystalBall.json  DynamicSlice.json  Fibonacci.json  GammaFun.json  Legendre.json  LegendreAssoc.json  NormalizeHistogram.json  TSVDUnfoldExample.json  ZoomHistogram.json  analyze.json  annotation3d.json  approx.json  archi.json  arrows.json  basic3d.json  candledecay.json  candleplot.json  candleplotstack.json  candleplotwhiskers.json  candlescaled.json  canvas.json  chi2test.json  compile.json  crown.json  cumulative.json  ellipse.json  eval.json  event.json  exclusiongraph.json  exclusiongraph2.json  feynman.json  fillhistosauto2p.json  fillrandom.json  first.json  formula1.json  framework.json  gaussian_ratio_plot.json  (+87 more)
macros/: analyze.C  archi.C  arrows.C  basic3d.C  compile.C  crown.C  ellipse.C  eval.C  event.C  feynman.C  gaxis.C  gaxis3.C  latex.C  latex4.C  mass_spectrum.C  piechart.C
macros/graphics/: tornado.C
macros/graphs/: seism.C  timeonaxis.C
macros/hist/: cumulative.C  fillhistosauto2p.C  hsum.C  hsumTimer.C
macros/macros_2/: formula1.C
macros/math/: mathmoreIntegration.C  multidimSampling.C
test/: CMakeLists.txt  GraphicsJsonTests.cpp  GraphsJsonTests.cpp  JsonTests.cpp  SvgTests.js
